First draft preliminary fixes: - Doctorate to Doctor - Removed subparts from figure captions - lowercase "mechanical engineering"

--- a/src/SymTrap/sym_trap_paper.tex
+++ b/src/SymTrap/sym_trap_paper.tex
@@ -16,7 +16,7 @@ Unfortunately, fully autonomous solutions can’t utilize this reference point, 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.78\textwidth]{~/figures/raster/sym-trap-quadrants-no-captions.png}
-	\caption{Two examples of symmetry pose dyads with the correct (left) and symmetry trap (right) kinematics. For some orientations, the symmetry trap is obviously incorrect (top), and for others, it is more ambiguous (bottom).}
+	\caption[Two examples of symmetric tibial poses]{Two examples of symmetry pose dyads with the correct (left) and symmetry trap (right) kinematics. For some orientations, the symmetry trap is obviously incorrect (top), and for others, it is more ambiguous (bottom).}
 	\label{fig:symmetry-trap-quadrants}
 \end{figure}
 
