--- a/Andrew_Jensen_Dissertation.tex
+++ b/Andrew_Jensen_Dissertation.tex
@@ -39,7 +39,7 @@
 
 \title{Methods for Autonomous Measurement of 3D Joint Kinematics from 2D Fluoroscopic Images}%  Put your title here.
 
-\degreeType{Doctorate of Philosophy}%   Official name of your degree; e.g. "Doctorate of Philosophy."
+\degreeType{Doctor of Philosophy}%   Official name of your degree; e.g. "Doctorate of Philosophy."
 \major{Mechanical Engineering}%                    Your official Department
 \author{Andrew James Jensen}%                  Your Name
 \thesisType{Dissertation}%              Dissertation (PhD) or Thesis (Masters)
