--- a/src/0-Preamble/biographyFile.tex
+++ b/src/0-Preamble/biographyFile.tex
@@ -1,3 +1,3 @@
-Andrew Jensen is a Florida native from Sarasota, Florida. He attended the University of Florida for his undergraduate degree in Mechanical Engineering, for which he received high honors. He took a brief hiatus from school to work at an orthopaedic solutions company, Exactech. The COVID-19 pandemic cut his time at Exactech short, so he joined the Gary J Miller Orthopaedic Biomechanics Laboratory as a part-time researcher during the summer leading up to his first official semester of graduate school.
+Andrew Jensen is a Florida native from Sarasota, Florida. He attended the University of Florida for his undergraduate degree in mechanical engineering, for which he received high honors. He took a brief hiatus from school to work at an orthopaedic solutions company, Exactech. The COVID-19 pandemic cut his time at Exactech short, so he joined the Gary J Miller Orthopaedic Biomechanics Laboratory as a part-time researcher during the summer leading up to his first official semester of graduate school.
 
 Andrew enjoys reading (mostly philosophy and science fiction), working out, and hanging out with his dog.
